fix datepicker z-index

--- a/src/protected/application/themes/BaseV1/assets/css/sass/application/_advanced-search.scss
+++ b/src/protected/application/themes/BaseV1/assets/css/sass/application/_advanced-search.scss
@@ -6,7 +6,7 @@
 }
 #main-header #busca {
     position: relative;
-    z-index: $z-index-9;
+    z-index: $z-index-13;
 }
 #busca-avancada {
     background-color: $gray-light;
