--- a/src/protected/application/themes/BaseV1/assets/css/sass/globals/_variables.scss
+++ b/src/protected/application/themes/BaseV1/assets/css/sass/globals/_variables.scss
@@ -185,14 +185,6 @@ $form-fields-height:                   2rem !default;
 //
 // Note: These variables are not generated into the Customizer.
 
-$zindex-navbar:            1000 !default;
-$zindex-dropdown:          1000 !default;
-$zindex-popover:           1060 !default;
-$zindex-tooltip:           1070 !default;
-$zindex-navbar-fixed:      1030 !default;
-$zindex-modal-background:  1040 !default;
-$zindex-modal:             1050 !default;
-
 $z-index-1:   800 !default;
 $z-index-2:   900 !default;
 $z-index-3:  1000 !default;
